[gd_scene load_steps=11 format=3 uid="uid://bpd8b80c8y7vo"]

[ext_resource type="Script" path="res://Scenes/Prefabs/UI/Settings.gd" id="1_djqak"]
[ext_resource type="Texture2D" uid="uid://2rpmid1gnwur" path="res://Images/UI/Buttons/RoundButton.png" id="3_eqj71"]
[ext_resource type="Texture2D" uid="uid://6adv5bnfl4ff" path="res://Images/UI/Buttons/Back.png" id="6_u5sf3"]
[ext_resource type="FontFile" uid="uid://ccgpsjqwwow8o" path="res://Fonts/Bubblegum.ttf" id="7_rpfsf"]
[ext_resource type="Script" path="res://Scenes/Prefabs/UI/GraphicsSettings.gd" id="7_yw05g"]
[ext_resource type="Script" path="res://Scenes/Prefabs/UI/AudioSettings.gd" id="8_movmu"]
[ext_resource type="Script" path="res://Scenes/Prefabs/UI/BackSettings.gd" id="9_2u8pj"]
[ext_resource type="Script" path="res://Scenes/Prefabs/UI/SavePopUp.gd" id="10_0gr64"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bdubp"]

[sub_resource type="CanvasTexture" id="CanvasTexture_a5un4"]

[node name="Settings" type="Node2D" node_paths=PackedStringArray("audio_panel", "graphics_panel", "main_panel", "back_button")]
script = ExtResource("1_djqak")
audio_panel = NodePath("AudioSettings")
graphics_panel = NodePath("GraphicsSettings")
main_panel = NodePath("MainNode")
back_button = NodePath("Back")

[node name="MainNode" type="Node2D" parent="."]

[node name="VBoxContainer" type="HBoxContainer" parent="MainNode"]
offset_left = 250.0
offset_top = 194.0
offset_right = 892.0
offset_bottom = 234.0
theme_override_constants/separation = 70
alignment = 1

[node name="Audio" type="Button" parent="MainNode/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Ustawienia audio"

[node name="Graphics" type="Button" parent="MainNode/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Ustawienia graficzne"

[node name="Title" type="Label" parent="MainNode"]
offset_left = 316.0
offset_top = 119.0
offset_right = 842.0
offset_bottom = 185.0
theme_override_fonts/font = ExtResource("7_rpfsf")
theme_override_font_sizes/font_size = 50
text = "Ustawienia"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioSettings" type="Control" parent="." node_paths=PackedStringArray("sliders_tab")]
visible = false
layout_mode = 3
anchors_preset = 0
script = ExtResource("8_movmu")
sliders_tab = [NodePath("ContentContainer/SliderContainer/MasterSlider"), NodePath("ContentContainer/SliderContainer/MusicSlider"), NodePath("ContentContainer/SliderContainer/SFXSlider")]

[node name="Title" type="Label" parent="AudioSettings"]
layout_mode = 0
offset_left = 316.0
offset_top = 119.0
offset_right = 842.0
offset_bottom = 191.0
theme_override_fonts/font = ExtResource("7_rpfsf")
theme_override_font_sizes/font_size = 50
text = "Audio"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContentContainer" type="HBoxContainer" parent="AudioSettings"]
layout_mode = 0
offset_left = 250.0
offset_top = 207.0
offset_right = 893.0
offset_bottom = 364.0
theme_override_constants/separation = 20
alignment = 1

[node name="LabelsContainer" type="VBoxContainer" parent="AudioSettings/ContentContainer"]
layout_mode = 2

[node name="MasterLabel" type="Label" parent="AudioSettings/ContentContainer/LabelsContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Master"

[node name="MusicLabel" type="Label" parent="AudioSettings/ContentContainer/LabelsContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Music"

[node name="SFXLabel" type="Label" parent="AudioSettings/ContentContainer/LabelsContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "SFX"

[node name="SliderContainer" type="VBoxContainer" parent="AudioSettings/ContentContainer"]
layout_mode = 2

[node name="MasterSlider" type="HSlider" parent="AudioSettings/ContentContainer/SliderContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicSlider" type="HSlider" parent="AudioSettings/ContentContainer/SliderContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="SFXSlider" type="HSlider" parent="AudioSettings/ContentContainer/SliderContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="CheckboxContainer" type="VBoxContainer" parent="AudioSettings/ContentContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 2

[node name="MasterCheckBox" type="CheckBox" parent="AudioSettings/ContentContainer/CheckboxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="MusicCheckBox" type="CheckBox" parent="AudioSettings/ContentContainer/CheckboxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="SFXCheckBox" type="CheckBox" parent="AudioSettings/ContentContainer/CheckboxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Label" type="Label" parent="AudioSettings/ContentContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="AudioSettings" groups=["Button"]]
layout_mode = 0
offset_left = 408.0
offset_top = 412.0
offset_right = 748.0
offset_bottom = 545.0

[node name="Mute" type="Label" parent="AudioSettings"]
layout_mode = 0
offset_left = 771.0
offset_top = 194.0
offset_right = 812.0
offset_bottom = 217.0
text = "Mute"

[node name="GraphicsSettings" type="Control" parent="." node_paths=PackedStringArray("resolution_dropdown", "full_screen_check_box")]
visible = false
layout_mode = 3
anchors_preset = 0
script = ExtResource("7_yw05g")
resolution_dropdown = NodePath("ContentContainer/MarginContainer/ControlsContainer/ResolutionDropDown")
full_screen_check_box = NodePath("ContentContainer/MarginContainer/ControlsContainer/CheckBox")

[node name="Title" type="Label" parent="GraphicsSettings"]
layout_mode = 0
offset_left = 316.0
offset_top = 119.0
offset_right = 842.0
offset_bottom = 191.0
theme_override_fonts/font = ExtResource("7_rpfsf")
theme_override_font_sizes/font_size = 50
text = "Grafika"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContentContainer" type="HBoxContainer" parent="GraphicsSettings"]
layout_mode = 0
offset_left = 251.0
offset_top = 218.0
offset_right = 891.0
offset_bottom = 610.0
theme_override_constants/separation = 30
alignment = 1

[node name="LabelsContainer" type="VBoxContainer" parent="GraphicsSettings/ContentContainer"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="GraphicsSettings/ContentContainer/LabelsContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Rozdzielczość"

[node name="QualityLabel" type="Label" parent="GraphicsSettings/ContentContainer/LabelsContainer"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Jakość"

[node name="FullScreenLabel" type="Label" parent="GraphicsSettings/ContentContainer/LabelsContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Pełny ekran"

[node name="MarginContainer" type="MarginContainer" parent="GraphicsSettings/ContentContainer"]
layout_mode = 2
theme_override_constants/margin_top = 18

[node name="ControlsContainer" type="VBoxContainer" parent="GraphicsSettings/ContentContainer/MarginContainer"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 35

[node name="ResolutionDropDown" type="OptionButton" parent="GraphicsSettings/ContentContainer/MarginContainer/ControlsContainer"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2

[node name="QualityDropDown" type="OptionButton" parent="GraphicsSettings/ContentContainer/MarginContainer/ControlsContainer"]
visible = false
custom_minimum_size = Vector2(150, 20)
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="GraphicsSettings/ContentContainer/MarginContainer/ControlsContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_bdubp")

[node name="Back" type="Node2D" parent="."]
visible = false
position = Vector2(254, -264)
scale = Vector2(0.7, 0.7)
script = ExtResource("9_2u8pj")
metadata/_edit_group_ = true

[node name="BackButton" type="TextureButton" parent="Back"]
offset_left = -2.0
offset_top = 546.0
offset_right = 104.0
offset_bottom = 646.0
texture_normal = ExtResource("3_eqj71")
texture_pressed = ExtResource("3_eqj71")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="Sprite2D" parent="Back"]
position = Vector2(51, 595)
scale = Vector2(0.124325, 0.124325)
texture = ExtResource("6_u5sf3")

[node name="SavePopUp" type="Node2D" parent="."]
visible = false
position = Vector2(388, 292)
script = ExtResource("10_0gr64")

[node name="Sprite2D" type="Sprite2D" parent="SavePopUp"]
modulate = Color(0.54099, 0.54099, 0.54099, 1)
position = Vector2(183.25, 86.75)
scale = Vector2(367.5, 174.5)
texture = SubResource("CanvasTexture_a5un4")

[node name="Label" type="Label" parent="SavePopUp"]
offset_top = 6.0
offset_right = 367.0
offset_bottom = 29.0
text = "Chcesz zapisać zmiany?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SavePopUp"]
offset_top = 126.0
offset_right = 366.0
offset_bottom = 156.0
theme_override_constants/separation = 20
alignment = 1

[node name="YesButton" type="Button" parent="SavePopUp/HBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
text = "Tak"

[node name="NoButton" type="Button" parent="SavePopUp/HBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
text = "Nie"

[node name="Cancel" type="Button" parent="SavePopUp/HBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
text = "Anuluj"

[connection signal="pressed" from="MainNode/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="MainNode/VBoxContainer/Graphics" to="." method="_on_graphics_pressed"]
[connection signal="mouse_exited" from="AudioSettings/ContentContainer/SliderContainer/MasterSlider" to="AudioSettings" method="_on_slider_mouse_exited"]
[connection signal="value_changed" from="AudioSettings/ContentContainer/SliderContainer/MasterSlider" to="AudioSettings" method="_on_slider_value_changed" binds= [0]]
[connection signal="mouse_exited" from="AudioSettings/ContentContainer/SliderContainer/MusicSlider" to="AudioSettings" method="_on_slider_mouse_exited"]
[connection signal="value_changed" from="AudioSettings/ContentContainer/SliderContainer/MusicSlider" to="AudioSettings" method="_on_slider_value_changed" binds= [1]]
[connection signal="mouse_exited" from="AudioSettings/ContentContainer/SliderContainer/SFXSlider" to="AudioSettings" method="_on_slider_mouse_exited"]
[connection signal="value_changed" from="AudioSettings/ContentContainer/SliderContainer/SFXSlider" to="AudioSettings" method="_on_slider_value_changed" binds= [2]]
[connection signal="toggled" from="AudioSettings/ContentContainer/CheckboxContainer/MasterCheckBox" to="AudioSettings" method="_on_check_box_toggled" binds= [0]]
[connection signal="toggled" from="AudioSettings/ContentContainer/CheckboxContainer/MusicCheckBox" to="AudioSettings" method="_on_check_box_toggled" binds= [1]]
[connection signal="toggled" from="AudioSettings/ContentContainer/CheckboxContainer/SFXCheckBox" to="AudioSettings" method="_on_check_box_toggled" binds= [2]]
[connection signal="item_selected" from="GraphicsSettings/ContentContainer/MarginContainer/ControlsContainer/ResolutionDropDown" to="GraphicsSettings" method="_on_resolution_drop_down_item_selected"]
[connection signal="toggled" from="GraphicsSettings/ContentContainer/MarginContainer/ControlsContainer/CheckBox" to="GraphicsSettings" method="_on_check_box_toggled"]
[connection signal="mouse_entered" from="Back/BackButton" to="Back" method="_on_back_button_mouse_entered"]
[connection signal="mouse_exited" from="Back/BackButton" to="Back" method="_on_back_button_mouse_exited"]
[connection signal="pressed" from="Back/BackButton" to="Back" method="_on_back_button_pressed"]
[connection signal="pressed" from="SavePopUp/HBoxContainer/YesButton" to="SavePopUp" method="_on_yes_button_pressed"]
[connection signal="pressed" from="SavePopUp/HBoxContainer/NoButton" to="SavePopUp" method="_on_no_button_pressed"]
[connection signal="pressed" from="SavePopUp/HBoxContainer/Cancel" to="SavePopUp" method="_on_cancel_pressed"]
